fin pantalla Detalle Paciente

--- a/demo/src/main/resources/static/detalle/detalle.html
+++ b/demo/src/main/resources/static/detalle/detalle.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="page-title">
-        <h1>Sistema Experto - Diagnóstico de Esquizofrenia</h1>
+        <h1 style="color: white;">Sistema Experto - Diagnóstico de Esquizofrenia</h1>
     </div>
     <div class="container" id="detalle" style="overflow-x: hidden;">
         <div class="row data-columns">
@@ -33,37 +33,6 @@
                     </div>
                 </div>
             </div>
-            <!-- <div class="col-md-6">
-                <div class="gray-box">
-                    <div class="checkbox-group">
-                        <div class="checkbox-item form-group margin-filas">
-                            <input type="checkbox" id="tea" name="antecedentes" value="TEA">
-                            <label for="tea">Trastorno del Espectro Autista</label>
-                        </div>
-                        <div class="checkbox-item form-group margin-filas">
-                            <input type="checkbox" id="depresivo" name="antecedentes" value="Depresivo">
-                            <label for="depresivo">Trastorno Depresivo</label>
-                        </div>
-                        <div class="checkbox-item form-group margin-filas">
-                            <input type="checkbox" id="comunicacion" name="antecedentes" value="Comunicacion">
-                            <label for="comunicacion">Trastorno de la Comunicación en la Infancia</label>
-                        </div>
-                        <div class="checkbox-item form-group margin-filas">
-                            <input type="checkbox" id="bipolar" name="antecedentes" value="Bipolar">
-                            <label for="bipolar">Trastorno Bipolar con Características Psicóticas</label>
-                        </div>
-                        <div class="checkbox-item form-group margin-filas">
-                            <input type="checkbox" id="esquizoafectivo" name="antecedentes" value="Esquizoafectivo">
-                            <label for="esquizoafectivo">Trastorno Esquizoafectivo</label>
-                        </div>
-                        <div class="checkbox-item form-group margin-filas">
-                            <input type="checkbox" id="familiares" name="antecedentes" value="Familiares">
-                            <label for="familiares">Antecedentes Familiares Psiquiátricos</label>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
-
             <div class="col-md-3 btn-bool">
                 <div class="form-group margin-filas opciones">
                     <h6 for="trastorno-autista">Trastorno del Espectro Autista</h6>
