--- a/demo/src/main/resources/static/detalle/detalleSintomasNegativos.html
+++ b/demo/src/main/resources/static/detalle/detalleSintomasNegativos.html
@@ -41,6 +41,18 @@
                 <input type="text" class="form-control" id="afectividad" name="afectividad">
             </div>
 
+            <div id="bajo-funcionamiento-id" class="button-container opciones">
+                <h6 for="bajo-funcionamiento">Bajo funcionamiento en ámbitos principales</h6>
+                <div class="btn-group">
+                    <button id="bajo-funcionamiento-si" class="btn btn-choice">Sí</button>
+                    <button id="bajo-funcionamiento-no" class="btn btn-choice">No</button>
+                </div>
+            </div>
+            <div id="bajo-funcionamiento-comentario" class="comentarios no-show-seccion">
+                <h6 for="bajo-funcionamiento-comentario">Comentario sobre el bajo funcionamiento</h6>
+                <textarea id="bajo-funcionamiento-comentario-text" class="form-control textarea" rows="2"
+                    style="pointer-events: none; opacity: 0.5;"></textarea>
+            </div>
         </div>
     </div>
 
