fix en text area para que pueda scrollear

--- a/demo/src/main/resources/static/detalle/detalleDiagnostico.html
+++ b/demo/src/main/resources/static/detalle/detalleDiagnostico.html
@@ -34,24 +34,24 @@
             <div id="justificacion-rechazo-container" class="justificacion-rechazo-container no-show-seccion">
                 <h6 for="justificacion-rechazo-title">Justificación de rechazo del diagnóstico</h6>
                 <textarea id="justificacion-rechazo" name="justificacion-rechazo" class="form-control textarea" rows="3"
-                    style="pointer-events: none; opacity: 0.5;"></textarea>
+                    readonly></textarea>
             </div>
 
             <div id="recomendacion-container" class="recomendacion-container">
                 <h6 for="recomendacion-title">Recomendación</h6>
                 <textarea id="recomendacion" name="recomendacion" class="form-control textarea" rows="3"
-                    style="pointer-events: none; opacity: 0.5;"></textarea>
+                    readonly></textarea>
             </div>
             <div id="comentarios-medicos-container" class="comentarios no-show-seccion">
                 <h6 for="comentarios-medicos-title">Comentarios adicionales sobre el paciente</h6>
                 <textarea id="comentarios-medicos" name="comentarios-medicos" class="form-control textarea" rows="3"
-                    style="pointer-events: none; opacity: 0.5;"></textarea>
+                    readonly></textarea>
             </div>
 
             <div id="justificacion-container" class="justificacion-container">
                 <h6 for="justificacion-title">Justificación</h6>
                 <textarea id="justificacion" name="justificacion" class="form-control textarea" rows="10"
-                    style="pointer-events: none; opacity: 0.5;"></textarea>
+                    readonly></textarea>
             </div>
         </div>
     </div>
