--- a/demo/src/main/resources/static/detalle/detalleSintomasNegativos.html
+++ b/demo/src/main/resources/static/detalle/detalleSintomasNegativos.html
@@ -51,7 +51,7 @@
             <div id="bajo-funcionamiento-comentario" class="comentarios no-show-seccion">
                 <h6 for="bajo-funcionamiento-comentario">Comentario sobre el bajo funcionamiento</h6>
                 <textarea id="bajo-funcionamiento-comentario-text" class="form-control textarea" rows="2"
-                    style="pointer-events: none; opacity: 0.5;"></textarea>
+                    readonly></textarea>
             </div>
         </div>
     </div>
