--- a/demo/src/main/resources/static/detalle/detalleComplementarios.html
+++ b/demo/src/main/resources/static/detalle/detalleComplementarios.html
@@ -52,7 +52,7 @@
                     <div class="col-12">
                         <h6 for="estudio-comentario">Comentario sobre el estudio</h6>
                         <textarea id="estudio-comentario-text" class="form-control textarea" rows="3"
-                            style="pointer-events: none; opacity: 0.5;"></textarea>
+                            readonly></textarea>
                     </div>
                 </div>
             </div>
