--- a/demo/src/main/resources/static/detalle/detalle.html
+++ b/demo/src/main/resources/static/detalle/detalle.html
@@ -19,36 +19,36 @@
             <h2>Datos del Paciente</h2>
             <div class="col-md-6">
                 <div class="gray-box">
-                    <div class="form-group margin-filas">
+                    <div class="form-group-detalle margin-filas">
                         <label for="nombre">Nombre</label>
                         <input type="text" class="form-control" id="nombre" name="nombre">
                     </div>
-                    <div class="form-group margin-filas">
+                    <div class="form-group-detalle margin-filas">
                         <label for="edad">Edad</label>
                         <input type="number" class="form-control" id="edad" name="edad">
                     </div>
-                    <div class="form-group margin-filas">
+                    <div class="form-group-detalle margin-filas">
                         <label for="sexo">Sexo</label>
                         <input type="text" class="form-control" id="sexo" name="sexo" placeholder="-">
                     </div>
                 </div>
             </div>
             <div class="col-md-3 btn-bool">
-                <div class="form-group margin-filas opciones">
+                <div class="form-group-btn margin-filas opciones">
                     <h6 for="trastorno-autista">Trastorno del Espectro Autista</h6>
                     <div class="btn-group">
                         <button id="trastorno-autista-si" class="btn btn-choice mb-2">Sí</button>
                         <button id="trastorno-autista-no" class="btn btn-choice mb-2">No</button>
                     </div>
                 </div>
-                <div class="form-group margin-filas opciones">
+                <div class="form-group-btn margin-filas opciones">
                     <h6 for="trastorno-comunicacion">Trastorno de la Comunicación en la Infancia</h6>
                     <div class="btn-group">
                         <button id="trastorno-comunicacion-si" class="btn btn-choice mb-2">Sí</button>
                         <button id="trastorno-comunicacion-no" class="btn btn-choice mb-2">No</button>
                     </div>
                 </div>
-                <div class="form-group margin-filas opciones">
+                <div class="form-group-btn margin-filas opciones">
                     <h6 for="trastorno-esquizoafectivo">Trastorno Esquizoafectivo</h6>
                     <div class="btn-group">
                         <button id="trastorno-esquizoafectivo-si" class="btn btn-choice mb-2">Sí</button>
@@ -57,21 +57,21 @@
                 </div>
             </div>
             <div class="col-md-3 btn-bool">
-                <div class="form-group margin-filas opciones">
+                <div class="form-group-btn margin-filas opciones">
                     <h6 for="trastorno-depresivo">Trastorno Depresivo</h6>
                     <div class="btn-group">
                         <button id="trastorno-depresivo-si" class="btn btn-choice mb-2">Sí</button>
                         <button id="trastorno-depresivo-no" class="btn btn-choice mb-2">No</button>
                     </div>
                 </div>
-                <div class="form-group margin-filas opciones">
+                <div class="form-group-btn margin-filas opciones">
                     <h6 for="trastorno-bipolar">Trastorno Bipolar con Características Psicóticas</h6>
                     <div class="btn-group">
                         <button id="trastorno-bipolar-si" class="btn btn-choice mb-2">Sí</button>
                         <button id="trastorno-bipolar-no" class="btn btn-choice mb-2">No</button>
                     </div>
                 </div>
-                <div class="form-group margin-filas opciones">
+                <div class="form-group-btn margin-filas opciones">
                     <h6 for="antecedentes-familiares">Antecedentes Familiares Psiquiátricos</h6>
                     <div class="btn-group">
                         <button id="antecedentes-familiares-si" class="btn btn-choice mb-2">Sí</button>
