Arreglo mensajes de error

--- a/demo/src/main/resources/static/formulario/complementarios.html
+++ b/demo/src/main/resources/static/formulario/complementarios.html
@@ -14,7 +14,7 @@
     <div class="col-md-12">
         <div class="gray-box">
             <div class="button-container opciones">
-                <h6 for="sustancias">Bajo sustancias o efectos médicos</h6>
+                <h6 for="sustancias"><b>Bajo sustancias o efectos médicos</b></h6>
                 <div class="btn-group">
                     <button id="sustancias-si" class="btn btn-choice">Sí</button>
                     <button id="sustancias-no" class="btn btn-choice">No</button>
@@ -23,7 +23,7 @@
             </div>
 
             <div class="button-container opciones">
-                <h6 for="estudios">Estudios</h6>
+                <h6 for="estudios"><b>Estudios</b></h6>
                 <div class="btn-group">
                     <button id="estudios-si" class="btn btn-choice">Sí</button>
                     <button id="estudios-no" class="btn btn-choice">No</button>
