--- a/demo/src/main/resources/static/formulario/sintomasNegativos.html
+++ b/demo/src/main/resources/static/formulario/sintomasNegativos.html
@@ -3,7 +3,7 @@
   <div class="gray-box">
 
     <div id="sintomas-negativos-duracion-id" class="form-group margin-filas">
-      <h6 for="sintomas-negativos-duracion">Duración de los síntomas negativos</h6>
+      <h6 for="sintomas-negativos-duracion"><b>Duración de los síntomas negativos</b></h6>
       <!-- <input type="number" class="form-control" id="negativos-duracion" name="negativos-duracion"
                 placeholder="Ingrese la duración"> -->
       <select class="form-control" id="sintomas-negativos-duracion" name="sintomas-negativos-duracion" required>
@@ -32,7 +32,7 @@
 
 
     <div id="negativo-tipo-atencion" class="form-group margin-filas">
-      <h6 for="negativo-negativo-tipo-atencion">Atención</h6>
+      <h6 for="negativo-negativo-tipo-atencion"><b>Atención</b></h6>
       <select class="form-control" id="atencion" name="atencion" required>
         <option value="atencion-euprosexia">Euprosexia</option>
         <option value="atencion-hipoprosexia">Hipoprosexia</option>
@@ -43,7 +43,7 @@
     </div>
 
     <div id="negativo-tipo-actividad" class="form-group margin-filas">
-      <h6 for="negativo-tipo-actividad">Actividad</h6>
+      <h6 for="negativo-tipo-actividad"><b>Actividad</b></h6>
       <select class="form-control" id="actividad" name="actividad" required>
         <option value="actividad-normobulico">Normobúlico</option>
         <option value="actividad-abulia">Abulia</option>
@@ -99,7 +99,7 @@
     </div>
 
     <div class="button-container opciones">
-      <h6 for="bajo-funcionamiento">Bajo Funcionamiento en Ámbitos Principales</h6>
+      <h6 for="bajo-funcionamiento"><b>Bajo Funcionamiento en Ámbitos Principales</b></h6>
       <div class="btn-group">
         <button id="bajo-funcionamiento-si" class="btn btn-choice">Sí</button>
         <button id="bajo-funcionamiento-no" class="btn btn-choice">No</button>
