--- a/demo/src/main/resources/static/formulario/sintomasPositivos.html
+++ b/demo/src/main/resources/static/formulario/sintomasPositivos.html
@@ -16,7 +16,7 @@
     <div class="col-md-12">
         <div class="gray-box">
             <div id="sintomas-positivos-duracion-id" class="form-group margin-filas">
-                <h6 for="sintomas-positivos-duracion">Duración de los síntomas positivos</h6>
+                <h6 for="sintomas-positivos-duracion"><b>Duración de los síntomas positivos</b></h6>
                 <select class="form-control" id="sintomas-positivos-duracion" name="sintomas-positivos-duracion" required>
                     <option value="sintomas-positivos-duracion-menor">Menos de un mes</option>
                     <option value="sintomas-positivos-duracion-mayor">Mayor o igual a un mes</option>
@@ -25,7 +25,7 @@
             </div>
 
             <div class="button-container opciones">
-                <h6 for="sintomas-positivos-alucinaciones">Alucinaciones</h6>
+                <h6 for="sintomas-positivos-alucinaciones"><b>Alucinaciones</b></h6>
                 <div class="btn-group">
                     <button id="sintomas-positivos-alucinaciones-si" class="btn btn-choice">Sí</button>
                     <button id="sintomas-positivos-alucinaciones-no" class="btn btn-choice">No</button>
@@ -96,7 +96,7 @@
             </div>
 
             <div id="tipo-ritmo-pensamiento-id" class="form-group margin-filas">
-                <h6 for="tipo-ritmo-pensamiento">Ritmo del pensamiento</h6>
+                <h6 for="tipo-ritmo-pensamiento"><b>Ritmo del pensamiento</b></h6>
                 <select class="form-control" id="ritmo-pensamiento" name="ritmo-pensamiento" required>
                     <option value="ritmo-pensamiento-sin-particularidades">Sin particularidades</option>
                     <option value="ritmo-pensamiento-bradipsiquia">Bradipsiquia</option>
